--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,15 +17,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - uses: actions/setup-go@v2
       with:
         go-version: ${{ matrix.go-version }}
+
     - uses: goreleaser/goreleaser-action@v2
       with:
         args: release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - uses: actions/upload-artifact@v2
       with:
         name: json2hcl
         path: dist/*
+
+    - uses: google-github-actions/release-please-action@v3
+      with:
+        release-type: go
+        package-name: json2hcl
