--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,7 +29,7 @@ release:
   #  Check https://github.com/goreleaser/goreleaser/issues/2304 for more info.
   #
   # Default is empty.
-  discussion_category_name: General
+  # discussion_category_name: 
 
   # If set to auto, will mark the release as not ready for production
   # in case there is an indicator for this in the tag e.g. v1.0.0-rc1
