--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,5 +1,5 @@
 builds:
-- 
+-
   goos:
   - windows
   - darwin
@@ -23,14 +23,6 @@ release:
   # Default is false.
   draft: false
 
-  # If set, will create a release discussion in the category specified.
-  #
-  # Warning: do not use categories in the 'Announcement' format.
-  #  Check https://github.com/goreleaser/goreleaser/issues/2304 for more info.
-  #
-  # Default is empty.
-  # discussion_category_name: 
-
   # If set to auto, will mark the release as not ready for production
   # in case there is an indicator for this in the tag e.g. v1.0.0-rc1
   # If set to true, will mark the release as not ready for production.
@@ -51,7 +43,7 @@ release:
   # Header template for the release body.
   # Defaults to empty.
   header: |
-    ## Some title ({{ .Date }})
+    ## Welcome to the automatically created release at ({{ .Date }})
 
     Welcome to this new release!
 
@@ -64,23 +56,10 @@ release:
 
   # You can change the name of the release.
   # Default is `{{.Tag}}` on OSS and `{{.PrefixedTag}}` on Pro.
-  name_template: "{{.ProjectName}}-v{{.Version}} {{.Env.USER}}"
+  name_template: "v{{.Version}}"
 
   # You can disable this pipe in order to not create the release on any SCM.
   # Keep in mind that this might also break things that depens on the release URL, for instance, homebrew taps.
   #
   # Defaults to false.
   disable: false
-
-  # You can add extra pre-existing files to the release.
-  # The filename on the release will be the last part of the path (base).
-  # If another file with the same name exists, the last one found will be used.
-  # These globs can also include templates.
-  #
-  # Defaults to empty.
-  # extra_files:
-  #   - glob: ./path/to/file.txt
-  #   - glob: ./glob/**/to/**/file/**/*
-  #   - glob: ./glob/foo/to/bar/file/foobar/override_from_previous
-  #   - glob: ./single_file.txt
-  #     name_template: file.txt # note that this only works if glob matches 1 file only
